kuber/grpc-heavy-duty.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-heavy-duty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-heavy-duty
  template:
    metadata:
      labels:
        app: grpc-heavy-duty
    spec:
      containers:
      - name: grpc-heavy-duty
        image: alexivanchyk/grpc-heavy-duty:v1
        ports:
        - containerPort: 50053
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-heavy-duty
spec:
  selector:
    app: grpc-heavy-duty
  ports:
  - protocol: TCP
    port: 50053
    targetPort: 50053
