kuber/grpc-item.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-item
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-item
  template:
    metadata:
      labels:
        app: grpc-item
    spec:
      containers:
      - name: grpc-item
        image: alexivanchyk/grpc-item:v1
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-item
spec:
  selector:
    app: grpc-item
  ports:
  - protocol: TCP
    port: 50051
    targetPort: 50051
